# cascade

./: .gitignore  CLAUDE.md  OPEN_QUESTIONS.md  README.md  chain.testnet.toml  chain.toml  pyproject.toml
.github/workflows/: publish-pool.yml
base_generator/: NOTICE  README.md  config.json  generator.py
base_generator/tests/: diversity_check.py  test_generator_contract.py
benchmarks/: README.md  pyproject.toml
benchmarks/tests/: test_time_normalize.py
cascade/: __init__.py
cascade/audit/: __init__.py  checks.py  main.py  rederive.py
cascade/eval/: benchmarks.py  crps.py  koth.py  window.py
cascade/interface/: dedup.py  generator.py  static_guard.py  validation.py
cascade/miner/: cli.py  dashboard.py  score.py  verify.py
cascade/pool/: __init__.py  builder.py  cli.py  source.py
cascade/provision/: core.py  health.py  hostsfile.py  loop.py  main.py  policy.py  state.py
cascade/screen/: __init__.py  canonicalize.py  judge.py  screen.py  signals.py
cascade/shared/: announce.py  chain.py  chain_status.py  config.py  hippius.py  logging_util.py  manifest.py  receipt.py
cascade/trainer/: contract.py  corpus.py  loop.py  main.py  queue.py  remote.py  sandbox.py  sandbox_container.py  toto2_model.py  toto2_trainer.py  wandb_sink.py  worker.py
cascade/validator/: cascade.py  eval_offload.py  evaluator.py  loop.py  main.py  pool.py  state.py  windows.py
cascade/website/: index.html  vercel.json
decisions/: DEC-CA-0003-content-dedup-0.99.md  DEC-CA-0003-provisioner-rules-of-escalation.md  DEC-CA-0003-warm-start-sequencing.md  DEC-CA-0004-cascade-persist-throne.md
deploy/: cascade-provisioner.service  pod_bootstrap.sh  provision.mainnet.toml  provision.testnet.toml
docs/: ARCHITECTURE.md  AUDIT.md  BITTENSOR_V11_UPGRADE.md  COMMUNICATION.md  DEPLOY_PODS.md  EVAL_POOL.md  INTERFACE.md  MAINNET_LAUNCH.md  MINER.md  TESTNET.md  VALIDATOR.md
docs/updates/: 2026-07-12-weekly-roundup.md
experiments/tokenizer_ablation/: .gitignore  README.md  pyproject.toml
experiments/tokenizer_ablation/notebooks/: TSFM_toto2_4m_tokenizer_ablation_v10.ipynb
experiments/tokenizer_ablation/tests/: test_smoke.py
experiments/tokenizer_ablation/tsfm_ablation/: __init__.py  cli.py  config.py  corpus.py  device.py  generators.py  gift_eval.py  hub.py  infer.py  model.py  optim.py  paths.py  probes.py  runner.py  time_eval.py  tokenizers.py  train.py
metronome/: __init__.py
metronome/eval/: gate.py
metronome/interface/: generator.py  validation.py
metronome/miner/: cli.py
metronome/pool/: cli.py
metronome/shared/: chain.py  config.py  hippius.py  manifest.py
metronome/trainer/: contract.py  corpus.py  loop.py  main.py  queue.py  remote.py  sandbox.py  stream.py  toto2_model.py  toto2_trainer.py  worker.py
metronome/validator/: loop.py  main.py  pool.py
scripts/: announce_events.py  measure_reveal_jitter.py  provision.example.toml  publish_hf_eval.py  remote_hosts.example.toml
tests/: conftest.py
(+64 files in other folders)
